@@ -24,6 +24,12 @@
 #include FT_INTERNAL_OBJECTS_H
 #include FT_INTERNAL_DRIVER_H
 
+  /* error messages */
+#undef FTERRORS_H_
+#define FT_ERROR_START_LIST     {
+#define FT_ERRORDEF( e, v, s )  case v: str = s; break;
+#define FT_ERROR_END_LIST       default: str = "unknown error"; }
+
 #include "common.h"
 #include "output.h"
 #include "mlgetopt.h"
@@ -48,9 +54,15 @@
   PanicZ( FT_Library   library,
           const char*  message )
   {
+    FT_String  *str;
+
+
     FT_Done_FreeType( library );
 
-    fprintf( stderr, "%s\n  error = 0x%04x\n", message, error );
+    switch( error )
+    #include FT_ERRORS_H
+
+    fprintf( stderr, "%s\n  error = 0x%04x, %s\n", message, error, str );
     exit( 1 );
   }
 
